{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 8,
  "lineage": "7f6f53f2-43f7-2990-1aa7-0d668de5e7e5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tfinstance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bcc094591f354be2",
            "arn": "arn:aws:ec2:us-east-1:343889984927:instance/i-0b4863ffcac50b4d5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b4863ffcac50b4d5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tfkeypair1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d9f837dee8d0e1bc",
            "private_dns": "ip-10-42-1-10.ec2.internal",
            "private_ip": "10.42.1.10",
            "public_ip": "100.26.138.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d047008887de20c4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011127abb3388e375",
            "tags": {
              "Name": "tfinstance1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cf19cb417e256cd9"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_tfinstance1",
            "aws_subnet.subnet_example",
            "aws_vpc.vpc_example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343889984927:internet-gateway/igw-03c690ada28710ee4",
            "id": "igw-03c690ada28710ee4",
            "owner_id": "343889984927",
            "vpc_id": "vpc-07b3ff7319f2a88bd"
          },
          "dependencies": [
            "aws_vpc.vpc_example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "wan_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03c690ada28710ee4",
            "id": "r-rtb-0c9f693d1edea4c7c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c9f693d1edea4c7c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.vpc_example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_tfinstance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343889984927:security-group/sg-0cf19cb417e256cd9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0cf19cb417e256cd9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_tfinstance1",
            "name_prefix": "",
            "owner_id": "343889984927",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-07b3ff7319f2a88bd"
          },
          "dependencies": [
            "aws_vpc.vpc_example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343889984927:subnet/subnet-011127abb3388e375",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.42.1.0/24",
            "id": "subnet-011127abb3388e375",
            "map_public_ip_on_launch": true,
            "owner_id": "343889984927",
            "vpc_id": "vpc-07b3ff7319f2a88bd"
          },
          "dependencies": [
            "aws_vpc.vpc_example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343889984927:vpc/vpc-07b3ff7319f2a88bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.42.1.0/24",
            "default_network_acl_id": "acl-062b9de050c430e23",
            "default_route_table_id": "rtb-0c9f693d1edea4c7c",
            "default_security_group_id": "sg-095a2c41d9988a9d4",
            "dhcp_options_id": "dopt-87871bfd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07b3ff7319f2a88bd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c9f693d1edea4c7c",
            "owner_id": "343889984927"
          }
        }
      ]
    }
  ]
}